# FY_SocketClient_Linker

./: CMakeLists.txt  README.md
include/: FDEightConfigInfo.h  FDEightLinkClient.h  ifaddrs-android-4dage.h
ios-build/: CMakeCache.txt  cmake_install.cmake
ios-build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease  format_cmakeRulesBuildPhase.makeRelease
ios-build/FKKK_LINKER.build/Debug-iphoneos/ALL_BUILD.build/: Script-088D7660F8F745D2BB8A6E61.sh  dgph  dgph~
ios-build/FKKK_LINKER.build/Debug-iphoneos/FDKK-linker.build/: dgph  dgph~
ios-build/FKKK_LINKER.build/Debug-iphoneos/FDKK-linker.build/Objects-normal/arm64/: FDEightLinkClient.d  FDEightLinkClient.dia  FDEightLinkSocket.d  FDEightLinkSocket.dia  FDKK-linker.LinkFileList  cJSON.d  ifaddrs-android-4dage.d  s2j.d
ios-build/FKKK_LINKER.build/Debug-iphoneos/ZERO_CHECK.build/: dgph  dgph~
ios-build/FKKK_LINKER.build/Debug/ALL_BUILD.build/: Script-088D7660F8F745D2BB8A6E61.sh  dgph
ios-build/FKKK_LINKER.build/Debug/FDKK-linker.build/: dgph
ios-build/FKKK_LINKER.build/Debug/FDKK-linker.build/Objects-normal/x86_64/: FDKK-linker.LinkFileList
ios-build/FKKK_LINKER.build/Debug/ZERO_CHECK.build/: Script-F6FD95E504034C8CB3D5F737.sh  dgph~
ios-build/FKKK_LINKER.xcodeproj/: project.pbxproj
ios-build/FKKK_LINKER.xcodeproj/project.xcworkspace/xcuserdata/4dage_imacmini.xcuserdatad/: UserInterfaceState.xcuserstate
ios-build/FKKK_LINKER.xcodeproj/xcuserdata/4dage_imacmini.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: FDEightLinkClient.c  FDEightLinkClient.h  FDEightLinkSocket.c  FDEightLinkSocket.h  ifaddrs-android-4dage.c
